--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,22 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
+.game{
+    background-image: url('images/back.jpg');
+    height: 100vh;
+    background-position: center;
+    display: flex;
+    flex-direction: row;
+}
+
 .board{
     margin: auto;
-    background: #ddd;
+    background: rgba(0,0,0,0.5);
     overflow: hidden;
     outline: none;
-    border: 2px solid black
+    border: 5px solid black
 }
 
 .cell{
@@ -12,6 +25,8 @@
     float: left;
     overflow: hidden;
     box-sizing: border-box;
+    border: 1px violet ;
+    border-style: dotted;
 }
 
 .body-cell{
@@ -21,6 +36,7 @@
     overflow: hidden;
     box-sizing: border-box;
     background-color: blue;
+    border: 2px green solid;
 }
 
 .food-cell{
@@ -30,4 +46,124 @@
     overflow: hidden;
     box-sizing: border-box;
     background-color: red;
+    /* padding: 5px; */
+    border-radius: 50%;
 }
+.gameStarter{
+    position: fixed;
+    z-index: 2;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+    background-color: #85b559;
+    border: 5px black solid;
+}
+.gameOver{
+    position: fixed;
+    z-index: 2;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+    background-color: #85b559;
+    height: 20%;
+    width: 20%;
+    color: white;
+    font-family: 'Roboto Mono', monospace, sans-serif;
+    text-transform: uppercase;
+    text-align: center;
+    padding: 5% 2%;
+    border: 5px black solid;
+}
+
+.gameOver button, .gameStarter button{
+    margin-top: 10%;
+    height: 50px;
+    width: 60%;
+    background-color: #B66A5A;
+    border: none;
+    font-family: 'Roboto Mono', monospace, sans-serif;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.pointScore{
+    height: 70%;
+    width: 30%;
+    margin-left: 7.5%;
+    margin-top: 7.5%;
+    background-color: rgba(0,0,0,0.5);
+}
+
+.score{
+    margin-top: 10%;
+    text-align: center;
+    color: white;
+    font-family: 'Roboto Mono', monospace, sans-serif;
+    text-transform: uppercase;
+    font-size: 25px;
+    line-height: 40px;
+}
+.score span{
+    background-color: #B66A5A;
+    padding: 5px 15px
+}
+
+.pointScore .gameName{
+    width: 80%;
+    background-color: #B66A5A;
+    margin-left: 10%;
+    margin-top: 5%;
+    height: 30%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr ;
+    grid-template-areas: 
+        '. . .  .  . . . . . . . . . . . . . . . . . . . . . . . . . . .'
+        '. .  s0 s0 .  . n .  .  .  .  n4 . . .  a2 a2 .  .  . k .  .  .  k0 . e e0 e0 e0 .'
+        '. s  .  .  s1 . n n0 .  .  .  n4 . . a1 .  .  a3 .  . k .  .  k3 .  . e . . . .'
+        '. s  .  .  .  . n n0 n1 .  .  n4 . a .  .  .  .  a4 . k .  k2 .  .  . e . . . .'
+        '. .  s2 s2 .  . n .  n1 n2 .  n4 . a .  .  .  .  a4 . k k1 .  .  .  . e e1 e1 . .'
+        '. .  .  .  s3 . n .  .  n2 n3 n4 . a a0 a0 a0 a0 a4 . k .  k4 .  .  . e . . . .'
+        '. s5 .  .  s3 . n .  .  .  n3 n4 . a .  .  .  .  a4 . k .   . k5 .  . e . . . .'
+        '. .  s4 s4 .  . n .  .  .  .  n4 . a .  .  .  .  a4 . k .   . .  k6 . e e2 e2 e2 .'
+        '. . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .'
+    ;
+}
+
+.b{
+    background-color: black;
+    width: 100%;
+    height: 100%;
+}
+
+.s{grid-area: s}
+.s0{grid-area: s0}
+.s1{grid-area: s1}
+.s2{grid-area: s2}
+.s3{grid-area: s3}
+.s4{grid-area: s4}
+.s5{grid-area: s5}
+.n{grid-area: n}
+.n0{grid-area: n0}
+.n1{grid-area: n1}
+.n2{grid-area: n2}
+.n3{grid-area: n3}
+.n4{grid-area: n4}
+.a{grid-area: a}
+.a0{grid-area: a0}
+.a1{grid-area: a1}
+.a2{grid-area: a2}
+.a3{grid-area: a3}
+.a4{grid-area: a4}
+.k{grid-area: k}
+.k0{grid-area: k0}
+.k1{grid-area: k1}
+.k2{grid-area: k2}
+.k3{grid-area: k3}
+.k4{grid-area: k4}
+.k5{grid-area: k5}
+.k6{grid-area: k6}
+.e{grid-area: e}
+.e0{grid-area: e0}
+.e1{grid-area: e1}
+.e2{grid-area: e2}
